--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   flutter_riverpod: ^2.5.1
   rxdart: ^0.28.0
   flutter_svg: ^2.0.10+1
-
+  firebase_core: ^3.4.0
+  cloud_firestore: ^5.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
