--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   flutter_svg: ^2.0.10+1
   firebase_core: ^3.4.0
   cloud_firestore: ^5.3.0
+  dio: ^5.7.0
+  firebase_auth: ^5.2.0
+  google_sign_in: ^6.2.1
+  firebase_messaging: ^15.1.0
+  flutter_local_notifications: ^17.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
