feat : login with facebook

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,3 +57,7 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies{
+    implementation 'com.facebook.android:facebook-login:latest.release'
+}
