--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_messaging: ^15.1.0
   flutter_local_notifications: ^17.2.2
+  flutter_facebook_auth: ^7.1.0
 
 dev_dependencies:
   flutter_test:
