--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   firebase_messaging: ^15.1.0
   flutter_local_notifications: ^17.2.2
   flutter_facebook_auth: ^7.1.0
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +61,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  freezed: ^2.4.7
+  build_runner: ^2.3.3
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
