--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   hive_flutter: ^1.1.0
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
